added to javascript, worked on button functions

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
         <div>
             <div class="questions hide">
-                <h2 id=question>What is the answer?</h2>
-                <button class="answer-btn">1</button>
-                <button class="answer-btn">2</button>
-                <button class="answer-btn">3</button>
-                <button class="answer-btn">4</button>
+                <h2 id=question></h2>
+                <!-- <button class="answer-btn"></button>
+                <button class="answer-btn"></button>
+                <button class="answer-btn"></button>
+                <button class="answer-btn"></button> -->
             </div>
         </div>
     </main>
